--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>la meva primera web estàtica </title>
+    <title> Projecte Final </title>
   </head>
     <h1> Hola, mon!</h1>
 </html>
