--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
-<html>
-  <head>
-    <title> Projecte Final </title>
-  </head>
-    <h1> Hola, mon!</h1>
-</html>
+<!DOCTYPE html>
+<html lang="ca">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Empresa Informàtica</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Benvinguts a la nostra empresa informàtica</h1>
+        <p>Ens dediquem a oferir solucions tecnològiques eficients i a mida.</p>
+    </header>
 
+    <section id="about">
+        <h2>A què ens dediquem</h2>
+        <p>Som una empresa del sector informàtic enfocada en el desenvolupament de programari, manteniment de sistemes, suport tècnic i consultoria digital. Treballem per facilitar el creixement tecnològic dels nostres clients.</p>
+    </section>
+
+    <section id="team">
+        <h2>El nostre personal</h2>
+        <ul>
+            <li>Anna López - Desenvolupadora Full Stack</li>
+            <li>Jordi Puig - Tècnic de sistemes</li>
+            <li>Maria Serra - Consultora TIC</li>
+        </ul>
+    </section>
+
+    <section id="contact">
+        <h2>Contacte</h2>
+        <p>Pots contactar amb nosaltres per més informació:</p>
+        <ul>
+            <li>📍 Oficina: Carrer de la Tecnologia, 123 - Barcelona</li>
+            <li>📞 Telèfon: +34 933 123 456</li>
+            <li>📧 Correu: info@empresa-informatica.cat</li>
+        </ul>
+    </section>
+
+    <section id="reviews">
+        <h2>Ressenyes</h2>
+        <blockquote>"Servei excel·lent i molt professional. 100% recomanable!" – Carla M.</blockquote>
+        <blockquote>"Molt eficients i amb una gran atenció al client." – Marc T.</blockquote>
+    </section>
+
+    <footer>
+        <p>© 2025 Empresa Informàtica - Tots els drets reservats</p>
+    </footer>
+</body>
+</html>
