--- a/index.html
+++ b/index.html
@@ -8,39 +8,50 @@
 </head>
 <body>
     <header>
-        <h1>Benvinguts a la nostra empresa informàtica</h1>
-        <p>Ens dediquem a oferir solucions tecnològiques eficients i a mida.</p>
+        <div class="header-container">
+            <h1>Empresa Informàtica</h1>
+            <img src="logo.png" alt="Logo de l'empresa" class="logo">
+        </div>
+        <p class="subtitle">Solucions tecnològiques per al teu negoci</p>
     </header>
 
-    <section id="about">
-        <h2>A què ens dediquem</h2>
-        <p>Som una empresa del sector informàtic enfocada en el desenvolupament de programari, manteniment de sistemes, suport tècnic i consultoria digital. Treballem per facilitar el creixement tecnològic dels nostres clients.</p>
-    </section>
+    <main>
+        <section id="about">
+            <h2>A què ens dediquem</h2>
+            <p>Som una empresa del sector informàtic enfocada en el desenvolupament de programari, manteniment de sistemes, suport tècnic i consultoria digital. Treballem per facilitar el creixement tecnològic dels nostres clients.</p>
+        </section>
 
-    <section id="team">
-        <h2>El nostre personal</h2>
-        <ul>
-            <li>Anna López - Desenvolupadora Full Stack</li>
-            <li>Jordi Puig - Tècnic de sistemes</li>
-            <li>Maria Serra - Consultora TIC</li>
-        </ul>
-    </section>
+        <section id="team">
+            <h2>El nostre personal</h2>
+            <ul>
+                <li>Anna López - Desenvolupadora Full Stack</li>
+                <li>Jordi Puig - Tècnic de sistemes</li>
+                <li>Maria Serra - Consultora TIC</li>
+            </ul>
+        </section>
 
-    <section id="contact">
-        <h2>Contacte</h2>
-        <p>Pots contactar amb nosaltres per més informació:</p>
-        <ul>
-            <li>📍 Oficina: Carrer de la Tecnologia, 123 - Barcelona</li>
-            <li>📞 Telèfon: +34 933 123 456</li>
-            <li>📧 Correu: info@empresa-informatica.cat</li>
-        </ul>
-    </section>
+        <section id="contact">
+            <h2>Contacte</h2>
+            <p>Pots contactar amb nosaltres per més informació:</p>
+            <ul>
+                <li>📍 Oficina: Carrer de la Tecnologia, 123 - Barcelona</li>
+                <li>📞 Telèfon: +34 933 123 456</li>
+                <li>📧 Correu: info@empresa-informatica.cat</li>
+            </ul>
+        </section>
 
-    <section id="reviews">
-        <h2>Ressenyes</h2>
-        <blockquote>"Servei excel·lent i molt professional. 100% recomanable!" – Carla M.</blockquote>
-        <blockquote>"Molt eficients i amb una gran atenció al client." – Marc T.</blockquote>
-    </section>
+        <section id="reviews">
+            <h2>Ressenyes</h2>
+            <div class="review">
+                <blockquote>"Servei excel·lent i molt professional. 100% recomanable!"</blockquote>
+                <p class="reviewer">– Carla M.</p>
+            </div>
+            <div class="review">
+                <blockquote>"Molt eficients i amb una gran atenció al client."</blockquote>
+                <p class="reviewer">– Marc T.</p>
+            </div>
+        </section>
+    </main>
 
     <footer>
         <p>© 2025 Empresa Informàtica - Tots els drets reservats</p>
