--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-container">
             <h1>Empresa Informàtica</h1>
-            <img src="logo.png" alt="Logo de l'empresa" class="logo">
+            <img src="Logo empresa.jpg" alt="Logo de l'empresa" class="logo">
         </div>
         <p class="subtitle">Solucions tecnològiques per al teu negoci</p>
     </header>
