--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
             <h2>Contacte</h2>
             <p>Pots contactar amb nosaltres per més informació:</p>
             <ul>
-                <li>📍 Oficina: Carrer de la Tecnologia, 123 - Barcelona</li>
+                <li>📍 Oficina: Carrer de la Tecnologia, 123 - Andorra
+                    <ul style="margin-left: '50px'">
+                    <li>Sucursals: </li>
+                    <li>Barcelona</li>
+                    <li>Girona</li>
+                </ul>
+                </li>
                 <li>📞 Telèfon: +34 933 123 456</li>
-                <li>📧 Correu: info@empresa-informatica.cat</li>
+                <li>📧 Correu: rugarsystems@gmail.com</li>
             </ul>
         </section>
 
