--- a/indexC.html
+++ b/indexC.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empresa Informàtica</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./Impweb/style.css">
 </head>
 <body>
     <header>
