--- a/index.html
+++ b/index.html
@@ -26,25 +26,20 @@
     </header>
 
     <main>
-
-        <section id="contacte">
-            <h2>Contacte</h2>
-            <ul>
-                <li>📍 Oficina: Carrer de la Tecnologia, 123 - Andorra
-                <li>Sucursals: </li>
-                <ul style="margin-left: '50px'">
-                        <li>Barcelona</li>
-                        <li>Girona</li>
-                </ul>
-                </li>
-                <li>📞 Telèfon: +34 933 123 456</li>
-                <li>📧 Correu: rugarsystems@gmail.com</li>
-            </ul>
-        
-            <h3>Ubicació Aproximada via satèl·lit</h2>
-        <img src="calle_empresa.jpg" alt="Calle Empresa" class="calle">
+        <section id="inicio">
+            <div class="hero">
+                <h1>Empresa Informàtica</h1>
+                <p class="subtitle">Solucions tecnològiques per al teu negoci.</p>
+            </div>
         </section>
-        
+        <section id="serveis">
+            <h2>Sobre Nosaltres</h2>
+            <p>Som una empresa del sector informàtic enfocada en el desenvolupament de programari, manteniment de sistemes, suport tècnic i consultoria digital.</p>
+        </section>
+        <section id="serveis">
+            <h2>Que Busquem</h2>
+            <p>Ser l'empresa líder en tecnologia empresarial a Europa, reconeguda per la seva innovació i compromís.</p>
+        </section>
     </main>
 
     <footer>
