--- a/indexE.html
+++ b/indexE.html
@@ -18,7 +18,7 @@
             </ul>
             <div class="extra-links">
                 <a href="indexE.html">Español</a>
-                <a href="indexC.html">Català</a>
+                <a href="index.html">Català</a>
                 <a href="indexEN.html">English</a>
             </div>
             <img src="Logo empresa.jpg" alt="Logo empresa" class="logo">
