--- a/ressenyesC.html
+++ b/ressenyesC.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="indexC.html">Inici</a></li>
+                <li><a href="index.html">Inici</a></li>
                 <li><a href="serveisC.html">Serveis</a></li>
                 <li><a href="personalC.html">Personal</a></li>
                 <li><a href="contacteC.html">Contacte</a></li>
@@ -18,7 +18,7 @@
             </ul>
             <div class="extra-links">
                 <a href="indexE.html">Español</a>
-                <a href="indexC.html">Català</a>
+                <a href="index.html">Català</a>
                 <a href="indexEN.html">English</a>
             </div>
             <img src="Logo empresa.jpg" alt="Logo empresa" class="logo">
